--- a/src/app.css
+++ b/src/app.css
@@ -54,7 +54,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: transparent;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -62,10 +62,19 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+html {
+	background-color: transparent;
+}
+
 body {
 	margin: 0;
-	display: flex;
 	min-width: 320px;
 	min-height: 100vh;
+	overflow-x: hidden;
+	background-color: transparent;
+}
+
+* {
+	box-sizing: border-box;
 }
 
