--- a/src/lib/styles/apply.module.css
+++ b/src/lib/styles/apply.module.css
@@ -1,6 +1,6 @@
 .apply {
   position: absolute;
-  top: calc(100vw * 5.26 - 1500px);
+  top: calc(100vw * 5.26 * 0.8);
   left: 0;
   width: 100%;
   color: white;
@@ -84,9 +84,38 @@
   z-index: 1;
 }
 
+/* Laptop size optimizations */
+@media (min-width: 1280px) and (max-width: 1366px) {
+  /* 13" laptops */
+  .apply {
+    top: calc(100vw * 5.26 * 0.799);
+  }
+}
+
+@media (min-width: 1366px) and (max-width: 1440px) {
+  /* 13-14" laptops */
+  .apply {
+    top: calc(100vw * 5.26 * 0.8);
+  }
+}
+
+@media (min-width: 1440px) and (max-width: 1920px) {
+  /* 14-15" laptops */
+  .apply {
+    top: calc(100vw * 5.26 * 0.801);
+  }
+}
+
+@media (min-width: 1920px) and (max-width: 2560px) {
+  /* 15-16" laptops */
+  .apply {
+    top: calc(100vw * 5.26 * 0.802);
+  }
+}
+
 @media (max-width: 768px) {
   .apply {
-    top: calc(100vw * 5.26 - 300px);
+    top: calc(100vw * 5.26 * 0.8);
   }
 
   .content {
