--- a/src/lib/styles/speakers.module.css
+++ b/src/lib/styles/speakers.module.css
@@ -1,6 +1,6 @@
 .speakers {
   position: absolute;
-  top: calc(160vh + 2000px);
+  top: calc(100vw * 5.26 * 0.396);
   left: 0;
   width: 100%;
   color: white;
@@ -49,4 +49,33 @@
   line-height: 1.5;
   color: rgba(255, 255, 255, 0.75);
   margin: 0;
+}
+
+/* Laptop size optimizations */
+@media (min-width: 1280px) and (max-width: 1366px) {
+  /* 13" laptops */
+  .speakers {
+    top: calc(100vw * 5.26 * 0.395);
+  }
+}
+
+@media (min-width: 1366px) and (max-width: 1440px) {
+  /* 13-14" laptops */
+  .speakers {
+    top: calc(100vw * 5.26 * 0.396);
+  }
+}
+
+@media (min-width: 1440px) and (max-width: 1920px) {
+  /* 14-15" laptops */
+  .speakers {
+    top: calc(100vw * 5.26 * 0.397);
+  }
+}
+
+@media (min-width: 1920px) and (max-width: 2560px) {
+  /* 15-16" laptops */
+  .speakers {
+    top: calc(100vw * 5.26 * 0.398);
+  }
 }
